--- a/.gitignore
+++ b/.gitignore
@@ -40,7 +40,7 @@ captures/
 *.iml
 Backend/*.iml
 Backend/target
-# Backend/src/main/resources/application.properties
+Backend/src/main/resources/application.properties
 .idea/
 .idea/workspace.xml
 .idea/tasks.xml
